--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,6 @@ knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE)
 ```
 
-
 # Introduction and General Instructions
 
 In this guide you will find the manuals of all the available pipelines for the Bacteriology and Parasitology Department of the IDS (RIVM). This guide is in continuous development, For additions and adjustments to this guide contact [Roxanne Wolthuis](roxanne.wolthuis@rivm.nl).
@@ -33,73 +32,83 @@ In this guide you will find the manuals of all the available pipelines for the B
 
 ### Requirements and preparation
 
-This handbook assumes that you are working at the “bioinformatica” environment at the RIVM. It is possible to run the pipeline in other settings and even on your laptop but you need extra steps that will not be enlisted here.  
+This guide is written based on the “Wetenschappelijke werkplek” at the RIVM. It is possible to run the Juno pipelines on your laptop, but this requires additional steps that are not listed in this guide.
 
-- Placing of the data: Your data should all be placed in one single folder (no subfolders) in the BioGrid (`/data/BioGrid/<my_folder>/<my_data>/`) or in the scratch_dir folder (`/mnt/scratch_dir/<my_folder>/<my_data>/`). I strongly advice you to place it in the `scratch_dir` folder and to only copy it later to the BioGrid after the analysis. The run will be faster and therefore you will block the cluster less time for everyone else.  
+__1. Placement of the data__  
+All data should be placed in one folder within the Biogrid folder (`/data/BioGrid/your_folder/your_data/`)or scratch_dir folder (`/mnt/scratch_dir/your_folder/your_data`). Sub folders are not allowed. It is advised to store your data in the scratch_dir folder, this will make the analysis faster. After analysis it is possible to copy the output to the Biogrid folder.
 
-- Make sure that the folder that you use as input (it contains your input data) has the right name. This means: the folder that contains your data can have any name you want provided that you only use letters, numbers or underscores. If your folder name contains different characters, it may not be recognized by the pipeline. **IMPORTANT:** Your folder name and the PATH to it (so all the folders and subfolders that you have to enter to reach your folder) should NOT CONTAIN SPACES!!!!  
+__2. Naming restrictions on the folders__  
+In order to successfully run the Juno pipelines it is necessary to use the correct file names for all the folders in your input path. The input path is the path that leads to your input directory. For example `/mnt/scratch_dir/your_folder/your_data`. All folder names inside this path can only contain letters, numbers or underscores. Using spaces, different characters or special symbols inside your folder will cancel the analysis, because the Juno pipelines cannot recognize these kinds of folder names.
 
-- Make sure that your files have the right format: if they are fastq files, they should have the extension (`.fastq`, `.fq`, `.fastq.gz` or `.fq.gz`). If they are fasta files, they should have the extension `.fasta`. Any other requirements in the input files will be specified in the section of that specific pipeline.  
+__3. File format__  
+The files in the input need to have the right format. If you have .fastq files the extensions can be: `.fastq`, `.fq`, `.fastq.gz` or `.fq.gz`. If you have .fasta files the extension can be: `.fasta`. In some cases it is possible to use both .fasta and .fastq files as input.
+
+__4. Naming restrictions on the files__  
+Not only the folder names, but also the names of the input files have some restrictions. The file names can contain letters, numbers and underscores. If you are using .fastq files, the file name always has to end with _R1,  _R2, _1 or _2. If you use these ends in other places in the file name the pipeline will crash. Below is a good and a bad example of file names. If you use both file formats as input it is important that the files have identical names(except for the part that indicates the read of the .fastq file(R1 and R2).
+
+Good file name:  
+```{bash}
+IBESS11_S13_L001_R1.fastq.gz
+```
+
+Bad file name:  
+```{bash}
+IBESS11_1_S13_L001_R1.fastq.gz
+```
+
+Example of file names by using both .fastq and .fasta as input:  
+```{bash}
+IBESS11_S13_L001_R1.fastq.gz
+IBESS11_S13_L001_R2.fastq.gz
+IBESS11_S13_L001.fasta
+```
 
 ### Downloading pipelines {#downloading-instructions}
 
-All the bacteriology pipelines created by the IDS-bioinformatics group are stored in either [GitHub](https://github.com/RIVM-bioinformatics) or the [internal GitLab](https://gitl01-int-p.rivm.nl/) of the RIVM. Only people who belong to the RIVM and that are inside one of our servers/environments can access to the later one with their normal RIVM login details.  
+All Juno pipelines are stored in [Github](https://github.com/RIVM-bioinformatics) or the [internal Gitlab](https://gitl01-int-p.rivm.nl/) of the RIVM. The Juno pipelines inside GitHub are publicly accessible. The Juno pipelines in the internal Gitlab can only be accessed by users that are inside of the servers or environments of the RIVM. You can enter the internal Gitlab with your RIVM log in details.
 
-If you are going to download a pipeline, please do so in the same partition that your data is (preferentially `scratch_dir`). Each pipeline handbook has the instructions on where to find the code (either GitHub or GitLab). You can download every pipeline through the website or through the command line:  
+**Note:** If you download one of the Juno pipelines make sure to download it into the same partition to where your data is stored, preferentially scratch_dir. The instruction on where to retrieve the Juno pipeline can be found on the documentation page of each of the pipelines.
 
-_GitHub website_  
-
-1. Go to the website for the pipeline (check the section of the specific pipeline).  
-2. Press the green button “Code” on the page and then click on “Download zip” (see [Figure 1.1](#github-fig) for explanation).  
-3. A zip file (<pipeline_name>-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the `BioGrid` or the `scratch_dir` partitions, depending on where your data is.  
-4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file (see [Figure 1.2](#extract-fig) for explanation).   
-
-```{r github-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitHub website."}
-knitr::include_graphics("figures/screenshot_download_github.png")
+#### Download through Github/Gitlab website
+ - Go to the documentation page of the pipeline
+ - Click the Github or Gitlab link
+     - For Github → Click the green “Code” button on the page and click on “Download zip”([Figure 1.1](#github-fig) step 2)
+     - For Gitlab → Click the white “Download” button click on “Download zip”([Figure 1.3](#gitlab-fig) step 2)
+ - The zip file will now be in your Downloads folder, move the zip file to BioGrid partition or the scratch_dir partition. The download should be placed in the same partition as where your data is stored
+ - Extract the files of the zip file. In the ‘Wetenschappelijke Werkplek’ this can be done by right clicking the downloaded zip file, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear ([Figure 1.2](#extract-fig)).
+ 
+```{r github-fig, echo = FALSE, eval = TRUE, fig.cap = "Step 1 shows where to retrieve the Github clone link. Step 2 shows where to retrieve the .zip file."}
+knitr::include_graphics("figures/github_download_link.png")
 ```
 
-```{r extract-fig, echo = FALSE, eval = TRUE, fig.cap = "Unzipping a repository in Linux."}
-knitr::include_graphics("figures/screenshot_unzip.png")
+```{r gitlab-fig, echo = FALSE, eval = TRUE, fig.cap = "Step 1 shows where to retrieve the Gitlab clone link. Step 2 shows where to retrieve the .zip file."}
+knitr::include_graphics("figures/gitlab_download_link.png")
 ```
 
-_GitLab website_  
-
-1. Go to the website for the pipeline (check the section of the specific pipeline).   
-2. Press the small white button with a cloud and a downwards arrow. In the drop-down menu, choose "Download zip" (see [Figure 1.3](#gitlab-fig) for explanation).   
-3. A zip file (<pipeline_name>-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the `BioGrid` or the `scratch_dir` partitions, depending on where your data is.  
-4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file (see [Figure 1.2](#extract-fig) above for explanation).  
-
-```{r gitlab-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitLab website."}
-knitr::include_graphics("figures/screenshot_download_gitlab.png")
+```{r extract-fig, echo = FALSE, eval = TRUE, fig.cap = "Unzipping a repository in the Wetenschappelijke Werkplek."}
+knitr::include_graphics("figures/download_extract.png")
 ```
 
-_Command-line_   
+#### Download through command line
+ - In the “Wetenschappelijke Werkplek” go to Applications --> System Tools --> Open the Terminal([Figure 1.4](#terminal-fig))
+ - In the terminal, use the cd command to navigate towards the location where you want to download the pipeline  
+```{bash}
+cd /mnt/scratch_dir/your_folder/
+```
+ - Get the url of the pipeline
+     - For Github → Click on the green “Code” button and copy the link ([Figure 1.1](#github-fig) step 1)
+     - For Gitlab → Click on the blue “Clone” button and copy the link ([Figure 1.3](#gitlab-fig) step 1)
+ - Use the git clone command to download the pipeline  
+```{bash}
+git clone https://github.com/link_to_clone.git
+``` 
+ - The pipeline will ask for your username and password, if you have access and the log in details are correctly entered the pipeline will be downloaded and unzipped in the folder you used.
 
-Any member of the RIVM has a (RIVM-specific) GitLab account. You can log in with the same credentials that you use for accessing your workspaces. In the case of pipelines hosted on GitHub, you may need a free GitHub account.     
+**Note:** Every git url that is used to clone a repository always ends with .git
 
-1.  Open the “terminal” (you could also open “terminator”) by going to the “Applications” menu of the linux environment.  
-
-```{r commandline-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitLab website."}
+```{r terminal-fig, echo = FALSE, eval = TRUE, fig.cap = "Opening a terminal inside the Wetenschappelijke Werkplek."}
 knitr::include_graphics("figures/schreenshot_terminal.png")
 ```
-
-2. Go to the location where you want to download the pipeline using the command ‘cd’. For instance:  
-
-```{bash, eval = FALSE}
-cd /mnt/scratch_dir/<my_folder>/
-```
-**Note:** mind the slash at the beginning of the path
-
-3. Download the pipeline using the `git clone` command  
-
-```{bash, eval = FALSE}
-
-git clone <url_to_the_pipeline>.git
-
-```
-**Note**: notice that I added ".git" to the URL of the pipeline.  
-
-You will be asked to give your credentials (username + password) and then the (already unzipped) pipeline should have been downloaded in your current folder. 
 
 ### What to expect while running a Juno pipeline {#what-to-expect}  
 
