--- a/Juno-assembly.Rmd
+++ b/Juno-assembly.Rmd
@@ -58,6 +58,8 @@ See the [General Instructions for all pipelines](#general-instructions) first.
 
 **YOU NEED TO DOWNLOAD THE PIPELINE ONCE OR EVERY TIME YOU WANT TO UPDATE IT**
 
+Make sure to have followed the [instructions to set up conda](#set-conda) before installing any of our pipelines! 
+
 Please follow the [instructions to download pipelines](#downloading-instructions) from the Juno team of the IDS-bioinformatics group. The `r parameters$pipeline_name` pipeline can be found in this link: [Juno-assembly pipeline](https://github.com/AleSR13/Juno_pipeline).  
 
 After downloading the pipeline, it needs to be installed. To install the pipeline, first enter the folder where you downloaded the pipeline and run the installation script:
@@ -83,6 +85,8 @@ MAKE SURE YOU HAVE RUN THE INSTALLATION INSTRUCTIONS BEFORE USING THE PIPELINE F
 ```
 conda activate juno_assembly
 ```
+
+If you run in trouble please see the [troubleshooting section for conda activate](#problems-conda-activate).  
 
 4. Run the pipeline  
 
